break in middle of word to fix collapsible title overlfow

--- a/src/main/webapp/app/pages/curation/collapsible/styles.module.scss
+++ b/src/main/webapp/app/pages/curation/collapsible/styles.module.scss
@@ -40,6 +40,7 @@
 
 .collapsibleTitleWrapper {
   display: flex;
+  word-break: break-word;
   align-items: center;
   :hover {
     cursor: pointer;
